# QUMO

./: .cursorrules  .gitignore  LICENSE  README.md  pyproject.toml
src/qumo/: __init__.py  cli.py  transformer.py
src/qumo/core/: machine_key.py
src/qumo/optimizers/: name_optimizer.py  quantum_optimizer.py
tests/: conftest.py  test_rules_validation.py  test_transformer.py
tests/core/: test_machine_key.py  test_reserved_words.py
tests/optimizers/: test_quantum_optimizer.py
