[project]
name = "qumo"
version = "0.1.0"
description = "Quantum Unicode Machine Optimizer - A next-generation code optimization framework"
authors = [{ name = "abcdqfr" }]
license = "MIT"
readme = "README.md"
repository = "https://github.com/abcdqfr/QUMO"
dependencies = [
    "astroid>=3.0.1",
    "libcst>=1.1.0",
    "sympy>=1.12",
    "networkx>=3.2.1",
    "pytest>=7.4.3",
    "ruff>=0.1.6",
    "typer>=0.9.0",
    "rich>=13.7.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=qumo" 